# dtc-go

./: .gitignore  README.md  alloc.go  buffer.go  builder.go  date.go  dtc.go  enum.go  go.mod  go.sum  logon.go  message.go  vls.go
client/: client.go  conn.go  (+2 more)
codegen/rust/dtc-rs/: Cargo.toml
codegen/rust/dtc-rs/src/: client.rs  connection.rs  error.rs  main.rs  message.rs  protocol.rs  util.rs
codegen/rust/dtc-rs/src/sierra_chart/: mod.rs
codegen/rust/dtc-rs/src/v8/: account_balance_adjustment.rs  account_balance_adjustment_complete.rs  account_balance_adjustment_reject.rs  account_balance_reject.rs  account_balance_request.rs  account_balance_update.rs  add_correcting_order_fill.rs  alert_message.rs  alias.rs  cancel_order.rs  cancel_replace_order.rs  client_device_update.rs  constants.rs  correcting_order_fill_response.rs  current_positions_reject.rs  current_positions_request.rs  download_historical_order_fill_and_account_balance_data.rs  encoding_request.rs  encoding_request_extended.rs  encoding_response.rs  enums.rs  exchange_list_request.rs  exchange_list_response.rs  factory.rs  flatten_positions_for_trade_account.rs  general_log_message.rs  handler.rs  heartbeat.rs  heartbeat_extended.rs  historical_account_balance_response.rs  historical_account_balances_reject.rs  historical_account_balances_request.rs  historical_market_depth_data_record_response.rs  historical_market_depth_data_reject.rs  historical_market_depth_data_request.rs  historical_market_depth_data_response_header.rs  historical_order_fill_response.rs  historical_order_fills_reject.rs  historical_order_fills_request.rs  historical_price_data_record_response.rs  (+104 more)
codegen/rust/dtc-rs/src/v8/model/: alias.rs  constants.rs  encoding_request.rs  enums.rs  factory.rs  logon_request.rs  mod.rs  order_update.rs
codegen/rust/dtc-rs/src/v8/net/: handler.rs
(+2063 files in other folders)
